# doc-parser

./: .gitignore  Cargo.toml  README.md  docker-compose.dev.yml  docker-compose.full.dev.yml  docker-compose.models.dev.yml  docker-compose.yml
.github/: copilot-instructions.md
benchmarks/: README.md
configs/: format_routing.config.jsonc  model_stack.config.jsonc  pipeline.config.jsonc
docker/: Dockerfile  README.md  docker-compose.local.yml  document-parser.Dockerfile  ocr-service.Dockerfile
docs/: ARCHITECTURE.md  BOOK_EXTRACTION.md  DATA_MODEL.md  DEPLOYMENT.md  DEV_LAUNCH.md  IMPLEMENTATION_PLAN.md  LEGAL_EXTRACTION.md  MODEL_ROUTING.md  MODEL_SERVICES_DEV.md  MODEL_STACK.md  OBSERVABILITY.md  OCR_BACKENDS.md  PARSING_RULE.md  PRODUCTION.md  QUALITY_METRICS.md  README.md  REAL_MODEL_RUNTIME.md  REGRESSION_TESTING.md  RELEASE_CHECKLIST.md  RUNBOOK.md  SECURITY.md  TECHNOLOGIES.md  VLM_SLOW_PATH.md
examples/: fiction_book.actual_models.example.jsonc  html_document.example.json  hybrid_pdf_document.example.jsonc  legal_document.actual_models.example.jsonc  mixed_enterprise.actual_models.example.jsonc  scientific_document.actual_models.example.jsonc  xlsx_document.example.jsonc
regression/: README.md
schemas/: document_model.schema.jsonc  element_types.schema.jsonc
scripts/: ci_check.sh  dev_check_model_services.sh  dev_clean_data.sh  dev_smoke_api.sh  dev_smoke_real_runtime_phase1.sh  dev_start_model_services.sh  run_benchmarks.sh  run_regression.sh  smoke_test.sh  validate_golden.py
src/: assets.rs  chunking.rs  classifier.rs  config.rs  doctor.rs  (+10 more)
(+346 files in other folders)
