[package]
name = "document_parser"
version = "0.1.0"
edition = "2024"

[lib]
name = "document_parser"
path = "src/lib.rs"

[features]
default = []
onnx = []

[dependencies]
anyhow = "1"
async-trait = "0.1"
axum = { version = "0.7", features = ["multipart"] }
calamine = "0.26"
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
infer = "0.16"
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "tiff", "webp", "bmp", "gif"] }
json5 = "0.4"
lopdf = "0.34"
multer = "3"
mime_guess = "2"
pdf-extract = "0.7"
pulldown-cmark = "0.13"
quick-xml = "0.38"
regex = "1"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
scraper = "0.24"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "fs", "time", "net"] }
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6", features = ["trace", "cors", "limit"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
uuid = { version = "1", features = ["v4", "serde"] }
zip = { version = "2", default-features = false, features = ["deflate"] }
